addiing preprocessing to final notebook

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "source": [
-    "![img2](./visualizations/censored_hashtags.png)"
+    "![img2](./visualizations/censored_top_hashtags.png)"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -164,22 +164,17 @@
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "source": [
-    "# Corpus Statistics"
+    "To reiterate, this graph shows the aerage polarity scores for each label. We can see that a majority were scored as neutral. However, of those that were scored as negative, it seems like \"Not Hate Speech\" had more on average."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## Class Imbalance"
+    "## Class Imbalance\n",
+    "\n",
+    "The main roadblock of this dataset is the extreme clas imbalance. We can see that only 5.77% of the data is labeled as hate speech. This could present challenges during the modeling process."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -193,87 +188,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# total vocab"
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib import cm\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "plt.style.use('bmh')\n",
+    "import pickle\n",
+    "# NLP libraries\n",
+    "import nltk\n",
+    "from sklearn.feature_extraction import text \n",
+    "from nltk.stem import WordNetLemmatizer \n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.feature_extraction.text import TfidfTransformer\n",
+    "from nltk.probability import FreqDist\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.stem import PorterStemmer\n",
+    "# modeling libraries\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn import metrics, model_selection, svm\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix, plot_confusion_matrix, roc_curve, auc, classification_report"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# top words in each label"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# etc."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "source": [
-    "# Feature Engineering\n",
-    "Data cleaning function, tokenization, lemming"
+    "# Preprocessing Text Data\n",
+    "\n",
+    "The original data from `twitter_data.csv` was cleaned using RegEx in the `data_cleaning.ipynb` notebook. "
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# loading in clean_df\n",
+    "clean_df = pd.read_pickle('./pickle/clean_df.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "   total_votes  hate_speech_votes  other_votes  label  \\\n",
+       "0            3                  0            3      0   \n",
+       "1            3                  0            3      0   \n",
+       "2            3                  0            3      0   \n",
+       "\n",
+       "                                               tweet  \\\n",
+       "0  !!! RT @mayasolovely: As a woman you shouldn't...   \n",
+       "1  !!!!! RT @mleew17: boy dats cold...tyga dwn ba...   \n",
+       "2  !!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...   \n",
+       "\n",
+       "                                        clean_tweets  \n",
+       "0     as a woman you shouldnt complain about clea...  \n",
+       "1     boy dats coldtyga dwn bad for cuffin dat ho...  \n",
+       "2     dawg   you ever fuck a bitch and she sta to...  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>total_votes</th>\n      <th>hate_speech_votes</th>\n      <th>other_votes</th>\n      <th>label</th>\n      <th>tweet</th>\n      <th>clean_tweets</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!! RT @mayasolovely: As a woman you shouldn't...</td>\n      <td>as a woman you shouldnt complain about clea...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!! RT @mleew17: boy dats cold...tyga dwn ba...</td>\n      <td>boy dats coldtyga dwn bad for cuffin dat ho...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...</td>\n      <td>dawg   you ever fuck a bitch and she sta to...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "clean_df.head(3)"
+   ]
   },
   {
    "source": [],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
-    "## Vectorization"
+    "## Tokenizing & Removing Stop Words\n",
+    "\n",
+    "When working with text data, one of the first steps is to remove stop words from the corpus. Although text would be gramatically incorrect without these stop words, they provide little value to models and typically hinder performace.\n",
+    "\n",
+    "We can use NLTK's built-in library of stop words to remove them in a tokenizing function.\n",
+    "\n",
+    "Additionally, we tokenize text data so that machine learning algorithms can understand it."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# assigning variables to essential columns\n",
+    "data = clean_df['clean_tweets']\n",
+    "target = clean_df['label']"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 4,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting NLTK stop words as `stop_words`\n",
+    "stop_words = set(stopwords.words('english'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to tokeenize text in each column and remove stop words\n",
+    "def process_tweet(text):\n",
+    "    tokens = nltk.word_tokenize(text)\n",
+    "    stopwords_removed = [token.lower() for token in tokens if token.lower() not in stop_words]\n",
+    "    return stopwords_removed "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# applying the above function to our data/features \n",
+    "processed_data = list(map(process_tweet, data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "20277"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 9
+    }
+   ],
+   "source": [
+    "# getting count of all unique words in the corpus\n",
+    "total_vocab = set()\n",
+    "for comment in processed_data:\n",
+    "    total_vocab.update(comment)\n",
+    "len(total_vocab)"
+   ]
+  },
+  {
+   "source": [
+    "We can see that the corpus has a vocabulary of 20,277 unique words."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Top Words in Corpus"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[('bitch', 8227),\n",
+       " ('bitches', 3083),\n",
+       " ('like', 2766),\n",
+       " ('hoes', 2368),\n",
+       " ('pussy', 2099),\n",
+       " ('im', 2061),\n",
+       " ('hoe', 1906),\n",
+       " ('dont', 1749),\n",
+       " ('got', 1597),\n",
+       " ('ass', 1570),\n",
+       " ('get', 1428),\n",
+       " ('fuck', 1411),\n",
+       " ('u', 1280),\n",
+       " ('shit', 1262),\n",
+       " ('nigga', 1198),\n",
+       " ('aint', 1158),\n",
+       " ('trash', 1142),\n",
+       " ('lol', 1074),\n",
+       " ('know', 806),\n",
+       " ('niggas', 791)]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
+   "source": [
+    "# morphing `processed_data` into a readable list\n",
+    "flat_filtered = [item for sublist in processed_data for item in sublist]\n",
+    "# getting frequency distribution\n",
+    "clean_corpus_freqdist = FreqDist(flat_filtered)\n",
+    "# top 20 words in cleaned corpus\n",
+    "clean_corpus_freqdist.most_common(20)"
+   ]
+  },
+  {
+   "source": [
+    "These top words are mostly offensive terms, and some other slang words that the NLTK stop words removal function didn't pick up."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## Lemmatization\n",
+    "\n",
+    "This last method reduces each word into a linguistically valid **lemma**, or root word. It does this through linguistic mappings, using the WordNet lexical database.\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# creating a list with all lemmatized outputs\n",
+    "lemmatizer = WordNetLemmatizer() \n",
+    "lemmatized_output = []\n",
+    "\n",
+    "for listy in processed_data:\n",
+    "    lemmed = ' '.join([lemmatizer.lemmatize(w) for w in listy])\n",
+    "    lemmatized_output.append(lemmed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_lem = lemmatized_output\n",
+    "y_lem = target"
+   ]
+  },
+  {
+   "source": [
+    "Now `X_lem` and `y_lem` are contain cleaned text and the original labels, ready to be used for modeling."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
@@ -281,6 +472,27 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "## TF-IDF Vectorization"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "source": [
