adding baselines to final notebook

--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -165,7 +165,7 @@
   },
   {
    "source": [
-    "To reiterate, this graph shows the aerage polarity scores for each label. We can see that a majority were scored as neutral. However, of those that were scored as negative, it seems like \"Not Hate Speech\" had more on average."
+    "To reiterate, this graph shows the average polarity scores for each label. We can see that a majority were scored as neutral. However, of those that were scored as negative, it seems like \"Not Hate Speech\" had more on average."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -174,7 +174,7 @@
    "source": [
     "## Class Imbalance\n",
     "\n",
-    "The main roadblock of this dataset is the extreme clas imbalance. We can see that only 5.77% of the data is labeled as hate speech. This could present challenges during the modeling process."
+    "The main roadblock of this dataset is the extreme class imbalance. We can see that only 5.77% of the data is labeled as hate speech. This could present challenges during the modeling process."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>total_votes</th>\n      <th>hate_speech_votes</th>\n      <th>other_votes</th>\n      <th>label</th>\n      <th>tweet</th>\n      <th>clean_tweets</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!! RT @mayasolovely: As a woman you shouldn't...</td>\n      <td>as a woman you shouldnt complain about clea...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!! RT @mleew17: boy dats cold...tyga dwn ba...</td>\n      <td>boy dats coldtyga dwn bad for cuffin dat ho...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>3</td>\n      <td>0</td>\n      <td>3</td>\n      <td>0</td>\n      <td>!!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby...</td>\n      <td>dawg   you ever fuck a bitch and she sta to...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 52
     }
    ],
    "source": [
@@ -300,12 +300,12 @@
    ],
    "cell_type": "code",
    "metadata": {},
-   "execution_count": 4,
+   "execution_count": 53,
    "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 57
     }
    ],
    "source": [
@@ -369,14 +369,14 @@
   },
   {
    "source": [
-    "### Top Words in Corpus"
+    "## Top Words in Corpus"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 58
     }
    ],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,45 +468,462 @@
   },
   {
    "source": [
-    "# Modeling"
+    "# Feature Engineering"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## TF-IDF Vectorization"
+    "## Train-Test Split"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_lem, y_lem, test_size=0.20, random_state=15)"
+   ]
   },
   {
    "source": [
-    "## Baselines"
+    "## TF-IDF Vectorization\n",
+    "\n",
+    "Before tokenized text data can be fed into machine learning models, they must be transformed into numerical feature vectors. First, we’ll be trying one of the most popular methods, TF-IDF Vectorization.\n",
+    "\n",
+    "This is an acronym than stands for “Term Frequency — Inverse Document” Frequency which are the components of the resulting scores assigned to each word.\n",
+    "- Term Frequency: This summarizes how often a given word appears within a document.\n",
+    "- Inverse Document Frequency: This down scales words that appear a lot across documents.\n",
+    "\n",
+    "Without going into the math, TF-IDF are word frequency scores that try to highlight words that are more interesting, e.g. frequent in a document but not across other documents."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# using tf_idf vectorizor\n",
+    "tfidf = TfidfVectorizer(stop_words= stop_words, ngram_range=(1,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sparse matrix format with 265K stored elements\n",
+    "tfidf_data_train = tfidf.fit_transform(X_train)\n",
+    "tfidf_data_test = tfidf.transform(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Average Number of Non-Zero Elements in Vectorized Articles: 13.364420457984465\nPercentage of columns containing ZERO: 0.9998720483637183\n"
+     ]
+    }
+   ],
+   "source": [
+    "# taking a quick look of the non zero elements\n",
+    "non_zero_cols = tfidf_data_train.nnz / float(tfidf_data_train.shape[0])\n",
+    "print(\"Average Number of Non-Zero Elements in Vectorized Articles: {}\".format(non_zero_cols))\n",
+    "\n",
+    "percent_sparse = 1 - (non_zero_cols / float(tfidf_data_train.shape[1]))\n",
+    "print('Percentage of columns containing ZERO: {}'.format(percent_sparse))"
+   ]
+  },
+  {
+   "source": [
+    "99.9% of the columns contain a zero, meaning that's a very **sparse matrix** with 265K columns"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "# Baseline Modeling\n",
+    "\n",
+    "We use the evaluation metrics Precision, Recall and F1 score to determine success. However, F1 is valued as the “most important” metric because by finding an equal balance between Precision and Recall, it's useful for data with high class imbalance.\n",
+    "\n",
+    "Overall, we want as much hate speech to flagged as possible and so that it can be efficiently removed."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to print evaluation metrics\n",
+    "def evaluation(precision, recall, f1, f1_weighted):\n",
+    "    print('Testing Evaluation Metrics:')\n",
+    "    print('Precision: {:.4}'.format(precision))\n",
+    "    print('Recall: {:.4}'.format(recall))\n",
+    "    print('F1 Score: {:.4}'.format(f1))\n",
+    "    print('Weighted F1 Score: {:.4}'.format(f1_weighted))"
+   ]
+  },
+  {
+   "source": [
+    "## Baseline Random Forest"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf_baseline = RandomForestClassifier(n_estimators=100, class_weight='balanced', random_state=0)\n",
+    "# adding class_weight='balanced' increased accuracy & precision but decreased F1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 42.2 s, sys: 366 ms, total: 42.5 s\nWall time: 43.2 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# this cell takes 38 seconds to run\n",
+    "rf_baseline.fit(tfidf_data_train, y_train)\n",
+    "rf_test_preds = rf_baseline.predict(tfidf_data_test)"
+   ]
+  },
+  {
+   "source": [
+    "rf_precision = precision_score(y_test, rf_test_preds)\n",
+    "rf_recall = recall_score(y_test, rf_test_preds)\n",
+    "rf_f1_score = f1_score(y_test, rf_test_preds)\n",
+    "rf_f1_weighted = f1_score(y_test, rf_test_preds, average='weighted')"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": 68,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing Evaluation Metrics:\nPrecision: 0.4128\nRecall: 0.1613\nF1 Score: 0.232\nWeighted F1 Score: 0.9272\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation(rf_precision, rf_recall, rf_f1_score, rf_f1_weighted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# creating dictionary to store all metrics\n",
+    "metric_dict = {}\n",
+    "# adding scores to metric_dict\n",
+    "metric_dict['Baseline Random Forest'] = {'precision': rf_precision, 'recall': rf_recall, 'f1_score': rf_f1_score, 'weighted_f1': rf_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "## Baseline Random Forest"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg_baseline = LogisticRegression(penalty='l2', class_weight='balanced', random_state=20)\n",
+    "# class_weight='balanced' actually didn't impact the score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 2.96 s, sys: 216 ms, total: 3.18 s\nWall time: 1.15 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# this cell takes 3 seconds to run\n",
+    "logreg_baseline.fit(tfidf_data_train, y_train)\n",
+    "logreg_test_preds = logreg_baseline.predict(tfidf_data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logreg_precision = precision_score(y_test, logreg_test_preds)\n",
+    "logreg_recall = recall_score(y_test, logreg_test_preds)\n",
+    "logreg_f1_score = f1_score(y_test, logreg_test_preds)\n",
+    "logreg_f1_weighted = f1_score(y_test, logreg_test_preds, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing Evaluation Metrics:\nPrecision: 0.2939\nRecall: 0.5699\nF1 Score: 0.3878\nWeighted F1 Score: 0.9134\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation(logreg_precision, logreg_recall, logreg_f1_score, logreg_f1_weighted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding scores to metric_dict\n",
+    "metric_dict['Baseline Logisitic Regression'] = {'precision': logreg_precision, 'recall': logreg_recall, 'f1_score': logreg_f1_score, 'weighted_f1': logreg_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "## Baseline Random Forest"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "baseline_bayes = MultinomialNB(alpha = .01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 11 ms, sys: 5.2 ms, total: 16.2 ms\nWall time: 15.3 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# this cell takes 11 seconds to run\n",
+    "baseline_bayes.fit(tfidf_data_train, y_train)\n",
+    "bayes_test_preds = baseline_bayes.predict(tfidf_data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bayes_precision = precision_score(y_test, bayes_test_preds)\n",
+    "bayes_recall = recall_score(y_test, bayes_test_preds)\n",
+    "bayes_f1_score = f1_score(y_test, bayes_test_preds)\n",
+    "bayes_f1_weighted = f1_score(y_test, bayes_test_preds, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing Evaluation Metrics:\nPrecision: 0.4118\nRecall: 0.1254\nF1 Score: 0.1923\nWeighted F1 Score: 0.9255\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation(bayes_precision, bayes_recall, bayes_f1_score, bayes_f1_weighted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding scores to metric_dict\n",
+    "metric_dict['Baseline Naive Bayes'] = {'precision': bayes_precision, 'recall': bayes_recall, 'f1_score': bayes_f1_score, 'weighted_f1': bayes_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "## Baseline Support Vector Machine (SVM)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVM_baseline = svm.SVC(C=1.0, kernel='linear', degree=3, gamma='auto', class_weight='balanced')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "CPU times: user 51.3 s, sys: 874 ms, total: 52.2 s\nWall time: 52.7 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time \n",
+    "# this cell takes about 1 minute to run\n",
+    "# fit the training dataset on the classifier\n",
+    "SVM_baseline.fit(tfidf_data_train, y_train)\n",
+    "# predict the labels on validation dataset\n",
+    "SVM_test_preds = SVM_baseline.predict(tfidf_data_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SVM_precision = precision_score(y_test, SVM_test_preds)\n",
+    "SVM_recall = recall_score(y_test, SVM_test_preds)\n",
+    "SVM_f1_score = f1_score(y_test, SVM_test_preds)\n",
+    "SVM_f1_weighted = f1_score(y_test, SVM_test_preds, average='weighted')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Testing Evaluation Metrics:\nPrecision: 0.3609\nRecall: 0.4373\nF1 Score: 0.3955\nWeighted F1 Score: 0.9281\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation(SVM_precision, SVM_recall, SVM_f1_score, SVM_f1_weighted)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# adding scores to metric_dict\n",
+    "metric_dict['Baseline SVM'] = {'precision': SVM_precision, 'recall': SVM_recall, 'f1_score': SVM_f1_score, 'weighted_f1': SVM_f1_weighted}"
+   ]
+  },
+  {
+   "source": [
+    "## Evaluation Metrics for All Baseline Models"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                               precision    recall  f1_score  weighted_f1\n",
+       "Baseline Random Forest          0.412844  0.161290  0.231959     0.927249\n",
+       "Baseline Logisitic Regression   0.293900  0.569892  0.387805     0.913449\n",
+       "Baseline Naive Bayes            0.411765  0.125448  0.192308     0.925487\n",
+       "Baseline SVM                    0.360947  0.437276  0.395462     0.928112"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>precision</th>\n      <th>recall</th>\n      <th>f1_score</th>\n      <th>weighted_f1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Baseline Random Forest</th>\n      <td>0.412844</td>\n      <td>0.161290</td>\n      <td>0.231959</td>\n      <td>0.927249</td>\n    </tr>\n    <tr>\n      <th>Baseline Logisitic Regression</th>\n      <td>0.293900</td>\n      <td>0.569892</td>\n      <td>0.387805</td>\n      <td>0.913449</td>\n    </tr>\n    <tr>\n      <th>Baseline Naive Bayes</th>\n      <td>0.411765</td>\n      <td>0.125448</td>\n      <td>0.192308</td>\n      <td>0.925487</td>\n    </tr>\n    <tr>\n      <th>Baseline SVM</th>\n      <td>0.360947</td>\n      <td>0.437276</td>\n      <td>0.395462</td>\n      <td>0.928112</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 86
+    }
+   ],
+   "source": [
+    "pd.DataFrame.from_dict(metric_dict, orient='index')"
+   ]
+  },
+  {
+   "source": [
+    "Overall, the SVM model performed the best across unweighted and weighted F1. However, there is still work to be done to bring that score up higher. Next we'll try improving that model with grid search."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
