--- a/final_notebook.ipynb
+++ b/final_notebook.ipynb
@@ -200,6 +200,7 @@
     "%matplotlib inline\n",
     "plt.style.use('bmh')\n",
     "import pickle\n",
+    "\n",
     "# NLP libraries\n",
     "import nltk\n",
     "from sklearn.feature_extraction import text \n",
@@ -210,6 +211,7 @@
     "from nltk.probability import FreqDist\n",
     "from nltk.corpus import stopwords\n",
     "from nltk.stem import PorterStemmer\n",
+    "\n",
     "# modeling libraries\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
@@ -660,7 +662,7 @@
   },
   {
    "source": [
-    "## Baseline Random Forest"
+    "## Baseline Logistic Regression"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -736,7 +738,7 @@
   },
   {
    "source": [
-    "## Baseline Random Forest"
+    "## Baseline Naive Bayes"
    ],
    "cell_type": "markdown",
    "metadata": {}
