adding Doc2Vec model to final notebook

--- a/models/Doc2Vec.ipynb
+++ b/models/Doc2Vec.ipynb
@@ -126,7 +126,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train, test = train_test_split(clean_df, test_size=0.3, random_state=42)"
+    "doc_train, doc_test = train_test_split(clean_df, test_size=0.3, random_state=42)"
    ]
   },
   {
@@ -158,9 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tagged_train = train.apply(\n",
+    "tagged_train = doc_train.apply(\n",
     "    lambda r: TaggedDocument(words=tokenize_text(r['clean_tweets']), tags=[r.label]), axis=1)\n",
-    "tagged_test = test.apply(\n",
+    "tagged_test = doc_test.apply(\n",
     "    lambda r: TaggedDocument(words=tokenize_text(r['clean_tweets']), tags=[r.label]), axis=1)"
    ]
   },
